feat: add profile section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
       </nav>
     </div>
   </header>
+  <main class="main">
+    <section class="profile">
+      <div class="container profile__container">
+        <div class="profile__photo">
+          <img class="profile__img" src="@img/photo.jpg" alt="Моя фотография." width="300" height="300">
+        </div>
+        <div class="proofile__content">
+          <h1 class="main-title">Alexander Yakovlev</h1>
+          <p class="profile__text">Junior Front-end Developer</p>
+        </div>
+      </div>
+
+    </section>
+  </main>
 
   <script src="js/main.js"></script>
 </body>
