feat: add about section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
       </div>
 
     </section>
+    <div class="container main__container">
+      <div class="main__left">
+        <section class="about section" id="about">
+          <h2 class="section-title">About me</h2>
+          <p class="about__text">I’m an engineer. I decided to change my profession because programming has always been
+            interesting to me. I was interested in the direction of frontend development. I hope to get the necessary
+            skills and experience in RS School.</p>
+        </section>
+      </div>
+    </div>
   </main>
 
   <script src="js/main.js"></script>
