feat: add courses section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
             interesting to me. I was interested in the direction of frontend development. I hope to get the necessary
             skills and experience in RS School.</p>
         </section>
+        <section class="courses section" id="courses">
+          <h2 class="section-title">Courses</h2>
+          <ul class="courses__list">
+            <li class="courses__item">
+              <h3 class="courses__subtitle">HTML/CSS:</h3>
+              <a class="courses__link" href="https://htmlacademy.ru/" target="_blank">HTML Academy</a>
+            </li>
+            <li class="courses__item">
+              <h3 class="courses__subtitle">JavaScript:</h3>
+              <a class="courses__link" href="https://learn.javascript.ru/" target="_blank">JavaScript.ru</a>
+            </li>
+          </ul>
+        </section>
       </div>
     </div>
   </main>
