--- a/index.html
+++ b/index.html
@@ -120,6 +120,19 @@
             </li>
           </ul>
         </section>
+        <section class="languages section" id="languages">
+          <h2 class="section-title">Languages</h2>
+          <ul class="languages__list">
+            <li class="languages__item">
+              <h3 class="languages__subtitle">Russian</h3>
+              <p class="languages__text">Native</p>
+            </li>
+            <li class="languages__item">
+              <h3 class="languages__subtitle">English</h3>
+              <p class="languages__text">A2 (Pre-Intermediate)</p>
+            </li>
+          </ul>
+        </section>
       </div>
     </div>
   </main>
