feat: add skills section

--- a/index.html
+++ b/index.html
@@ -134,6 +134,33 @@
           </ul>
         </section>
       </div>
+      <div class="main__right">
+        <section class="skills section section--right" id="skills">
+          <h2 class="section-title">Skills</h2>
+          <ul class="skills__list">
+            <li class="skills__item">
+              <img class="skills__img" src="@img/html.svg" alt="HTML." width="96" height="96">
+              <p class="skills__text">HTML</p>
+            </li>
+            <li class="skills__item">
+              <img class="skills__img" src="@img/css.svg" alt="CSS." width="96" height="96">
+              <p class="skills__text">CSS</p>
+            </li>
+            <li class="skills__item">
+              <img class="skills__img" src="@img/javascript.svg" alt="JavaScript." width="96" height="96">
+              <p class="skills__text">JavaScript</p>
+            </li>
+            <li class="skills__item">
+              <img class="skills__img" src="@img/git.svg" alt="GIT." width="96" height="96">
+              <p class="skills__text">GIT</p>
+            </li>
+            <li class="skills__item">
+              <img class="skills__img" src="@img/figma.svg" alt="Figma." width="96" height="96">
+              <p class="skills__text">Figma</p>
+            </li>
+          </ul>
+        </section>
+      </div>
     </div>
   </main>
 
