feat: add projects section

--- a/index.html
+++ b/index.html
@@ -178,6 +178,15 @@ reverseStr('Hello, World!');
             </code>
           </pre>
         </section>
+        <section class="projects section section--right" id="projects">
+          <h2 class="section-title">Projects</h2>
+          <ul class="projects__list">
+            <li class="projects__item">
+              <a class="projects__link" href="https://github.com/alexyakovlev85/rsschool-cv" target="_blank"><img
+                  class="projects__img" src="@img/cv.jpg" alt="CV." width="300">CV</a>
+            </li>
+          </ul>
+        </section>
       </div>
     </div>
   </main>
