feat: add footer

--- a/index.html
+++ b/index.html
@@ -190,7 +190,25 @@ reverseStr('Hello, World!');
       </div>
     </div>
   </main>
-
+  <footer class="footer">
+    <div class="container">
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a class="footer__link" href="https://github.com/alexyakovlev85" target="_blank">
+            <img class="footer__img" src="@img/github-footer.svg" alt="Github." width="80">
+          </a>
+        </li>
+        <li class="footer__item">
+          <p class="footer__text">2022</p>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="https://rs.school/js/" target="_blank">
+            <img class="footer__img footer__img--rs" src="@img/rs-school.svg" alt="Rs school." width="100">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </footer>
   <script src="js/main.js"></script>
 </body>
 
