feat: add styles

--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="apple-touch-icon" sizes="57x57" href="@img/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="@img/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="@img/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="@img/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="@img/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="@img/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="@img/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="@img/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="@img/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="@img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="@img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="@img/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="@img/favicon-16x16.png">
-  <link rel="manifest" href="@img/manifest.json">
+  <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="manifest" href="img/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="@img/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="css/style.css">
   <title>Alexander Yakovlev CV</title>
@@ -49,7 +49,7 @@
     <section class="profile">
       <div class="container profile__container">
         <div class="profile__photo">
-          <img class="profile__img" src="@img/photo.jpg" alt="Моя фотография." width="300" height="300">
+          <img class="profile__img" src="img/photo.jpg" alt="Моя фотография." width="300" height="300">
         </div>
         <div class="proofile__content">
           <h1 class="main-title">Alexander Yakovlev</h1>
@@ -139,23 +139,23 @@
           <h2 class="section-title">Skills</h2>
           <ul class="skills__list">
             <li class="skills__item">
-              <img class="skills__img" src="@img/html.svg" alt="HTML." width="96" height="96">
+              <img class="skills__img" src="img/html.svg" alt="HTML." width="96" height="96">
               <p class="skills__text">HTML</p>
             </li>
             <li class="skills__item">
-              <img class="skills__img" src="@img/css.svg" alt="CSS." width="96" height="96">
+              <img class="skills__img" src="img/css.svg" alt="CSS." width="96" height="96">
               <p class="skills__text">CSS</p>
             </li>
             <li class="skills__item">
-              <img class="skills__img" src="@img/javascript.svg" alt="JavaScript." width="96" height="96">
+              <img class="skills__img" src="img/javascript.svg" alt="JavaScript." width="96" height="96">
               <p class="skills__text">JavaScript</p>
             </li>
             <li class="skills__item">
-              <img class="skills__img" src="@img/git.svg" alt="GIT." width="96" height="96">
+              <img class="skills__img" src="img/git.svg" alt="GIT." width="96" height="96">
               <p class="skills__text">GIT</p>
             </li>
             <li class="skills__item">
-              <img class="skills__img" src="@img/figma.svg" alt="Figma." width="96" height="96">
+              <img class="skills__img" src="img/figma.svg" alt="Figma." width="96" height="96">
               <p class="skills__text">Figma</p>
             </li>
           </ul>
@@ -183,7 +183,7 @@ reverseStr('Hello, World!');
           <ul class="projects__list">
             <li class="projects__item">
               <a class="projects__link" href="https://github.com/alexyakovlev85/rsschool-cv" target="_blank"><img
-                  class="projects__img" src="@img/cv.jpg" alt="CV." width="300">CV</a>
+                  class="projects__img" src="img/cv.jpg" alt="CV." width="300">CV</a>
             </li>
           </ul>
         </section>
@@ -195,7 +195,7 @@ reverseStr('Hello, World!');
       <ul class="footer__list">
         <li class="footer__item">
           <a class="footer__link" href="https://github.com/alexyakovlev85" target="_blank">
-            <img class="footer__img" src="@img/github-footer.svg" alt="Github." width="80">
+            <img class="footer__img" src="img/github-footer.svg" alt="Github." width="80">
           </a>
         </li>
         <li class="footer__item">
@@ -203,7 +203,7 @@ reverseStr('Hello, World!');
         </li>
         <li class="footer__item">
           <a class="footer__link" href="https://rs.school/js/" target="_blank">
-            <img class="footer__img footer__img--rs" src="@img/rs-school.svg" alt="Rs school." width="100">
+            <img class="footer__img footer__img--rs" src="img/rs-school.svg" alt="Rs school." width="100">
           </a>
         </li>
       </ul>
